Use slugify in notebook when loading lyrics to match script filenames

--- a/notebooks/01_initial_exploration.ipynb
+++ b/notebooks/01_initial_exploration.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ae12a90e",
    "metadata": {},
    "outputs": [
@@ -336,12 +336,17 @@
     "import os\n",
     "from collections import Counter\n",
     "import string\n",
+    "import re\n",
+    "\n",
+    "def slugify(name: str) -> str:\n",
+    "    \"\"\"Normalize a song/title to the same slug used by the scripts/get_genius_lyrics.py\"\"\"\n",
+    "    return re.sub(r'[_]+', '_', re.sub(r'\\W+', '_', name)).strip('_').lower()\n",
     "\n",
     "def load_lyrics(song_name):\n",
-    "    \"\"\"Load lyrics from file\"\"\"\n",
-    "    filename = f\"../data/lyrics/{song_name.lower().replace(' ', '_')}.txt\"\n",
+    "    \"\"\"Load lyrics from file using normalized slug filenames\"\"\"\n",
+    "    filename = f\"../data/lyrics/{slugify(song_name)}.txt\"\n",
     "    try:\n",
-    "        with open(filename, 'r') as f:\n",
+    "        with open(filename, 'r', encoding='utf-8') as f:\n",
     "            return f.read()\n",
     "    except FileNotFoundError:\n",
     "        return None\n",
@@ -376,8 +381,8 @@
     "        'common_words': common_words\n",
     "    }\n",
     "\n",
-    "# Analyze a few songs\n",
-    "test_songs = ['jump', 'panama', 'hot_for_teacher']\n",
+    "# Analyze a few songs (use titles or already-slugged names)\n",
+    "test_songs = ['Jump', 'Panama', 'Hot for Teacher']\n",
     "\n",
     "print(\"LYRIC ANALYSIS\")\n",
     "print(\"=\" * 60)\n",
